Archive2/eb/9d104704768344/output
main.cpp: In function 'int main()':
main.cpp:25:16: error: no match for 'operator+' (operand types are 'test' and 'test')
     test z = x + y;
                ^
main.cpp:25:10: warning: unused variable 'z' [-Wunused-variable]
     test z = x + y;
          ^
